# dbt-with-clickhouse

./: README.md  pyproject.toml
cluster/: Makefile  README.md  docker-compose.yaml
cluster/fs/volumes/ch-proxy/config/: config.yml
cluster/fs/volumes/clickhouse-01/etc/clickhouse-server/config.d/: config.xml
cluster/fs/volumes/clickhouse-02/etc/clickhouse-server/config.d/: config.xml
cluster/fs/volumes/clickhouse-03/etc/clickhouse-server/config.d/: config.xml
cluster/fs/volumes/clickhouse-keeper-01/etc/clickhouse-keeper/: keeper_config.xml
cluster_2S_2R_ch_proxy/: Makefile  docker-compose.yaml
cluster_2S_2R_ch_proxy/fs/volumes/ch-proxy/config/: config.yml
cluster_2S_2R_ch_proxy/fs/volumes/clickhouse-01/etc/clickhouse-server/config.d/: config.xml
cluster_2S_2R_ch_proxy/fs/volumes/clickhouse-02/etc/clickhouse-server/config.d/: config.xml
cluster_2S_2R_ch_proxy/fs/volumes/clickhouse-03/etc/clickhouse-server/config.d/: config.xml
dbt_with_clickhouse/: .user.yml  dbt_project.yml  profiles.yml
dbt_with_clickhouse/models/: my.sql  simple_distributed_model.sql  simple_view.sql
